--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>让我帮你百度一下|Let Me Baidu That For You</title>
+    <title>Let Me Baidu That For You</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
 <div id='footer'>
 			
 			<div style="text-align:center;">
-			<p><a href="https://sharecuts.cn/user/94lVvoMlgq">捷径作者作品主页</a></p>
+			<p><a href="https://sharecuts.cn/user/94lVdg6zgq">我的作品主页</a></p>
 			</div>
 			
 		</div>
